--- a/wtl2/wtl2/wtl2.vcxproj
+++ b/wtl2/wtl2/wtl2.vcxproj
@@ -113,6 +113,7 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -121,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="HttpServer.h" />
     <ClInclude Include="HttpSrvT.h" />
     <ClInclude Include="MainFrm.h" />
