--- a/wtl2/wtl2/wtl2.vcxproj
+++ b/wtl2/wtl2/wtl2.vcxproj
@@ -118,6 +118,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="URLOptions.cpp" />
     <ClCompile Include="wtl2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +130,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Thread.h" />
+    <ClInclude Include="URLOptions.h" />
     <ClInclude Include="wtl2View.h" />
   </ItemGroup>
   <ItemGroup>
