--- a/wtl2/wtl2/wtl2.vcxproj.filters
+++ b/wtl2/wtl2/wtl2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="URLOptions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="URLOptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
