Add URLs finished

--- a/wtl2/wtl2/wtl2.rc
+++ b/wtl2/wtl2/wtl2.rc
@@ -75,9 +75,9 @@ IDR_MAINFRAME MENU
 BEGIN
     POPUP "&HTTP Server"
     BEGIN
-        MENUITEM "Start\tCtrl-R",               ID_FILE_NEW
-        MENUITEM "Stop\tCtrl-Q",                ID_FILE_OPEN
-        MENUITEM "Resume",                      ID_FILE_SAVE
+        MENUITEM "Start\tCtrl-R",               ID_FILE_NEW, INACTIVE
+        MENUITEM "Stop\tCtrl-Q",                ID_FILE_OPEN, INACTIVE
+        MENUITEM "Clear List",                  ID_FILE_SAVE
         MENUITEM SEPARATOR
         MENUITEM "Configure URLs",              ID_FILE_PRINT
         MENUITEM SEPARATOR
@@ -201,7 +201,7 @@ STRINGTABLE
 BEGIN
     ID_FILE_NEW             "Start\nStart"
     ID_FILE_OPEN            "Stop\nStop"
-    ID_FILE_SAVE            "Resume\nResume"
+    ID_FILE_SAVE            "Clear List\nClear List"
     ID_FILE_PRINT           "Configure URLs\nURLs"
 END
 
@@ -292,14 +292,26 @@ LANGUAGE LANG_SPANISH, SUBLANG_SPANISH_MODERN
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 337, 161
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_SYSMENU
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+IDD_DIALOG1 DIALOGEX 0, 0, 337, 162
+STYLE DS_SETFONT | DS_CENTER | WS_POPUP | WS_SYSMENU
+FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     LISTBOX         IDC_LIST3,13,14,283,114,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_EDIT1,13,134,283,14,ES_AUTOHSCROLL
     PUSHBUTTON      "+",IDC_BUTTON1,303,134,20,14
     PUSHBUTTON      "-",IDC_BUTTON2,303,14,20,14
+END
+
+IDD_DIALOG2 DIALOGEX 0, 0, 337, 167
+STYLE DS_SETFONT | WS_POPUP
+FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
+BEGIN
+    LTEXT           "URL:",IDC_STATIC1,20,31,22,12
+    EDITTEXT        IDC_EDIT1,41,29,274,12,ES_AUTOHSCROLL
+    CONTROL         " Multiples URLs",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,54,71,75,10
+    CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | WS_DISABLED,273,70,21,14
+    LTEXT           "Groups:",IDC_STATIC2,215,73,34,8,WS_DISABLED
+    EDITTEXT        IDC_EDIT2,250,71,24,13,ES_CENTER | ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_DISABLED,WS_EX_CLIENTEDGE
 END
 
 
@@ -316,7 +328,15 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 330
         TOPMARGIN, 7
-        BOTTOMMARGIN, 154
+        BOTTOMMARGIN, 155
+    END
+
+    IDD_DIALOG2, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 330
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 160
     END
 END
 #endif    // APSTUDIO_INVOKED
