--- a/wtl2/wtl2/wtl2.rc
+++ b/wtl2/wtl2/wtl2.rc
@@ -300,6 +300,7 @@ BEGIN
     EDITTEXT        IDC_EDIT1,13,134,283,14,ES_AUTOHSCROLL
     PUSHBUTTON      "+",IDC_BUTTON1,303,134,20,14
     PUSHBUTTON      "-",IDC_BUTTON2,303,14,20,14
+    PUSHBUTTON      "Load From File\n...",IDC_BUTTON3,301,48,23,39,BS_CENTER | BS_MULTILINE
 END
 
 IDD_DIALOG2 DIALOGEX 0, 0, 337, 167
